# cmake-examples

./: .gitignore  CMakeLists.txt  README.md  compression.hpp  hello.cpp  mainpage.dox
.github/workflows/: ex14.yml
app/hello/: CMakeLists.txt  hello.cpp
app/myzip/: CMakeLists.txt  myzip.cpp
app/myzip/utest/: CMakeLists.txt  myzip.utest  textfile
cmake/: gen-ccov.in  lcov-harness
compression/: CMakeLists.txt  buffered_deflate_zstream.cpp  buffered_inflate_zstream.cpp  compression.cpp  deflate_zstream.cpp  inflate_zstream.cpp
compression/include/compression/: base_zstream.hpp  buffer.hpp  buffered_deflate_zstream.hpp  buffered_inflate_zstream.hpp  compression.hpp  deflate_zstream.hpp  hex.hpp  inflate_zstream.hpp  span.hpp  tostr.hpp
compression/utest/: CMakeLists.txt  compression.test.cpp  hex.test.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  indext.rst
docs/pyzstreamlib/: TextZstream.rst  ZstreamBase.rst  index.rst
pyzstream/: CMakeLists.txt  pyzstream.cpp  zstream.py
pyzstream/utest/: BufferedZstream_utest.py  CMakeLists.txt  TextZstream_utest.py  ZstreamBase_utest.py  __init__.py  openmode_utest.py  pyzstream.utest.in  pyzstream.utest.py  pyzstream_utest.py  zstream_testutil.py  zstream_utest.py
zstream/: CMakeLists.txt
zstream/include/zstream/: xfilebuf.hpp  zstream.hpp  zstreambuf.hpp
zstream/utest/: CMakeLists.txt  text.cpp  text.hpp  zstream.test.cpp  zstreambuf.test.cpp
